# zoomcamp-data-warehouse-ggcloud

./: .gitignore
.devcontainer/: devcontainer.json
wk3dw/: load-yellow-taxi-data.py  pyproject.toml  sql_solution.sql
