[project]
name = "wk3dw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dlt>=1.21.0",
    "google>=3.0.0",
    "google-api-core>=2.29.0",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=3.9.0",
    "notebook>=7.5.3",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
]
